deployment/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: apdul/woden-storage:latest
        command: ["celery", "-A", "your_project", "worker", "--loglevel=info"]
