deployment/heimdall.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: apdul/heimdall:latest
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
  - port: 50051
    targetPort: 50051
