deployment/test-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-postgres
spec:
  selector:
    matchLabels:
      app: test-postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: test-postgres
    spec:
      containers:
        - name: test-postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5433
---
apiVersion: v1
kind: Service
metadata:
  name: test-postgres-service
  labels:
    app: test-postgres
spec:
  type: ClusterIP
  ports:
   - port: 5433
  selector:
   app: test-postgres
