deployment/woden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: woden
  template:
    metadata:
      labels:
        app: woden
    spec:
      containers:
      - name: woden
        image: apdul/woden-storage:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: woden
spec:
  type: ClusterIP
  selector:
    app: woden
  ports:
  - port: 8000
    targetPort: 8000
