deployment/freya-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freya-ingress
spec:
  rules:
  - host: freya.example.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freya
            port:
              number: 80
